K8s/basiccore-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: basiccore-pod
  labels:
    app: basiccore
spec:
  containers:
  - name: basiccore
    image: isonaj/basiccore
    ports:
    - containerPort: 80
  nodeSelector:
    beta.kubernetes.io/os: linux
