K8s/basiccorewin-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basiccorewin-deployment
spec:
  replicas: 2
  template:
    metadata:
      name: basiccorewin-pod
      labels:
        app: basiccorewin
    spec:
      containers:
      - name: basiccorewin
        image: isonaj/basiccorewin
        ports:
        - containerPort: 80
      nodeSelector:
        beta.kubernetes.io/os: windows
