K8s/basicmvcwin-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: basicmvcwin-pod
  labels:
    app: basicmvcwin
spec:
  containers:
  - name: basicmvcwin
    image: isonaj/basicmvcwin
    ports:
    - containerPort: 80
  nodeSelector:
    beta.kubernetes.io/os: windows
