K8s/win-build-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: win-build
spec:
  replicas: 1
  template:
    metadata:
      name: win-build
      labels:
        app: win-build
    spec:
      containers:
      - name: win-build
        image: isonaj/win-build
      nodeSelector:
        beta.kubernetes.io/os: windows
