K8s/winbuild-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: winbuild
spec:
  replicas: 1
  template:
    metadata:
      name: winbuild
      labels:
        app: winbuild
    spec:
      containers:
      - name: winbuild
        image: isonaj/winbuild
      nodeSelector:
        beta.kubernetes.io/os: windows
