K8s/basiccore-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basiccore-service
spec:
  type: LoadBalancer
  selector:
    app: basiccore
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
