K8s/basicmvcwin-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basicmvcwin-service
spec:
  type: LoadBalancer
  selector:
    app: basicmvcwin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
