K8s/basicng-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: basicng-service
spec:
  type: LoadBalancer
  selector:
    app: basicng
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
