K8s/testvault-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: testvault-service
spec:
  type: LoadBalancer
  selector:
    app: testvault
  ports:
  - name: "80"
    protocol: TCP
    port: 80
    targetPort: 80
  - name: "443"
    protocol: TCP
    port: 443
    targetPort: 443
